Fix Label visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 
 body {
   font-family: "Open Sans", sans-serif;
-  color: #fff;
+  color: #212529;
   width:100%;
 }
 
